# Vidsaver

./: .gitignore  README.md  plane.md  pyproject.toml  pyrightconfig.json
.agents/skills/flet-app-workflow/: .skillfish.json  SKILL.md
.agents/skills/flet-app-workflow/agents/: openai.yaml
.agents/skills/flet-extension/: .skillfish.json  SKILL.md
.agents/skills/flet-extension-workflow/: .skillfish.json  SKILL.md
.agents/skills/flet-extension-workflow/agents/: openai.yaml
.agents/skills/flet-extension/agents/: openai.yaml
.agents/skills/flet-imperative/: .skillfish.json  SKILL.md
.agents/skills/flet-imperative/agents/: openai.yaml
.agents/skills/flet-imperative/examples/: 01_basic_app.py  02_async_clock.py  03_form_validation.py  04_file_picker_service.py  05_shared_preferences.py  06_animation_effects.py  07_dialog_example.py  08_layout_responsive.py  09_theme_styling.py  10_navigation_menu.py  11_data_table.py  12_window_controls.py  13_drag_drop.py  14_keyboard_events.py  15_gestures.py  16_clipboard.py  17_media_player.py  18_canvas_custom_paint.py  19_file_operations.py  20_charts_canvas_visualization.py
.agents/skills/flet-imperative/references/: api-traps.md  breaking-changes.md  error-guide.md  new-controls.md
.agents/skills/implement-flet-extension/: .skillfish.json
.github/workflows/: all-builds.yml
src/: cookies.txt  downloader.py  library.py  main.py
