[project]
name = "vidsaver"
version = "1.3.1"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Fazi-Gondal", email = "nextinpk@gmail.com" }
]
dependencies = [
    "flet==0.86.0",
    "flet-video==0.86.0",
    "flet-media-scanner",
    "yt-dlp",
    "requests",
    "certifi",
    "charset-normalizer",
    "idna",
    "urllib3"
]

[dependency-groups]
dev = [
    "flet-cli==0.86.0",
    "flet-desktop==0.86.0",
    "flet-web==0.86.0",
]

[tool.flet]
org = "com.fazi"
product = "Vidsaver"
company = "NextInPK"
copyright = "Copyright (C) 2023-2026 by Fazi-Gondal"
python_version = "3.13"

[tool.flet.icons]
android = "assets/icon.png"
splash_android = "assets/splash_android.png"

[tool.flet.app]
path = "src"

[tool.flet.android]
split_per_abi = true
target_arch = ["arm64-v8a"]
dependencies = [
    "certifi",
    "charset-normalizer",
    "idna",
    "requests",
    "urllib3",
    "yt-dlp",
    "flet-media-scanner",
]

[tool.flet.android.permission]
"android.permission.INTERNET" = true

[tool.flet.extensions]
flet_media_scanner = "flet_media_scanner.Extension"

[tool.flet.dev_packages]
flet-media-scanner = "packages/flet-media-scanner"

[tool.uv.sources]
flet-media-scanner = { workspace = true }

[tool.uv.workspace]
members = ["packages/flet-media-scanner"]
